@@ -22,16 +22,20 @@ name|java
 operator|.
 name|util
 operator|.
-name|ArrayList
+name|*
 import|;
 end_import
 begin_import
 import|import
-name|java
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
 operator|.
 name|util
 operator|.
-name|Collection
+name|BytesRef
 import|;
 end_import
 begin_comment
@@ -1212,6 +1216,45 @@ expr_stmt|;
 return|return
 name|a
 return|;
+block|}
+comment|/**    * Returns a new (deterministic and minimal) automaton that accepts the union    * of the given collection of {@link BytesRef}s representing UTF-8 encoded    * strings.    *     * @param utf8Strings    *          The input strings, UTF-8 encoded. The collection must be in sorted    *          order.    *     * @return An {@link Automaton} accepting all input strings. The resulting    *         automaton is codepoint based (full unicode codepoints on    *         transitions).    */
+DECL|method|makeStringUnion
+specifier|public
+specifier|static
+name|Automaton
+name|makeStringUnion
+parameter_list|(
+name|Collection
+argument_list|<
+name|BytesRef
+argument_list|>
+name|utf8Strings
+parameter_list|)
+block|{
+if|if
+condition|(
+name|utf8Strings
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+return|return
+name|makeEmpty
+argument_list|()
+return|;
+block|}
+else|else
+block|{
+return|return
+name|DaciukMihovAutomatonBuilder
+operator|.
+name|build
+argument_list|(
+name|utf8Strings
+argument_list|)
+return|;
+block|}
 block|}
 block|}
 end_class
