@@ -247,21 +247,6 @@ name|util
 operator|.
 name|automaton
 operator|.
-name|DaciukMihovAutomatonBuilder
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|automaton
-operator|.
 name|RegExp
 import|;
 end_import
@@ -1743,9 +1728,9 @@ expr_stmt|;
 block|}
 name|a
 operator|=
-name|DaciukMihovAutomatonBuilder
+name|BasicAutomata
 operator|.
-name|build
+name|makeStringUnion
 argument_list|(
 name|sortedAcceptTerms
 argument_list|)
