@@ -229,97 +229,7 @@ name|util
 operator|.
 name|automaton
 operator|.
-name|Automaton
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|automaton
-operator|.
-name|AutomatonTestUtil
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|automaton
-operator|.
-name|BasicOperations
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|automaton
-operator|.
-name|CompiledAutomaton
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|automaton
-operator|.
-name|DaciukMihovAutomatonBuilder
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|automaton
-operator|.
-name|RegExp
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|automaton
-operator|.
-name|SpecialOperations
+name|*
 import|;
 end_import
 begin_class
@@ -535,9 +445,9 @@ expr_stmt|;
 block|}
 name|termsAutomaton
 operator|=
-name|DaciukMihovAutomatonBuilder
+name|BasicAutomata
 operator|.
-name|build
+name|makeStringUnion
 argument_list|(
 name|terms
 argument_list|)
@@ -686,9 +596,9 @@ block|}
 name|Automaton
 name|alternate
 init|=
-name|DaciukMihovAutomatonBuilder
+name|BasicAutomata
 operator|.
-name|build
+name|makeStringUnion
 argument_list|(
 name|matchedTerms
 argument_list|)
@@ -1224,9 +1134,9 @@ block|}
 name|Automaton
 name|actual
 init|=
-name|DaciukMihovAutomatonBuilder
+name|BasicAutomata
 operator|.
-name|build
+name|makeStringUnion
 argument_list|(
 name|found
 argument_list|)
