@@ -18,15 +18,11 @@ comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more
 end_comment
 begin_import
 import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
+name|java
 operator|.
 name|util
 operator|.
-name|LuceneTestCase
+name|*
 import|;
 end_import
 begin_import
@@ -39,7 +35,20 @@ name|lucene
 operator|.
 name|util
 operator|.
-name|UnicodeUtil
+name|*
+import|;
+end_import
+begin_import
+import|import
+name|com
+operator|.
+name|carrotsearch
+operator|.
+name|randomizedtesting
+operator|.
+name|generators
+operator|.
+name|RandomInts
 import|;
 end_import
 begin_class
@@ -50,6 +59,179 @@ name|TestBasicOperations
 extends|extends
 name|LuceneTestCase
 block|{
+comment|/** Test string union. */
+DECL|method|testStringUnion
+specifier|public
+name|void
+name|testStringUnion
+parameter_list|()
+block|{
+name|List
+argument_list|<
+name|BytesRef
+argument_list|>
+name|strings
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|BytesRef
+argument_list|>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+name|RandomInts
+operator|.
+name|randomIntBetween
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+literal|0
+argument_list|,
+literal|1000
+argument_list|)
+init|;
+operator|--
+name|i
+operator|>=
+literal|0
+condition|;
+control|)
+block|{
+name|strings
+operator|.
+name|add
+argument_list|(
+operator|new
+name|BytesRef
+argument_list|(
+name|_TestUtil
+operator|.
+name|randomUnicodeString
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|Collections
+operator|.
+name|sort
+argument_list|(
+name|strings
+argument_list|)
+expr_stmt|;
+name|Automaton
+name|union
+init|=
+name|BasicAutomata
+operator|.
+name|makeStringUnion
+argument_list|(
+name|strings
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|union
+operator|.
+name|isDeterministic
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|BasicOperations
+operator|.
+name|sameLanguage
+argument_list|(
+name|union
+argument_list|,
+name|naiveUnion
+argument_list|(
+name|strings
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|naiveUnion
+specifier|private
+specifier|static
+name|Automaton
+name|naiveUnion
+parameter_list|(
+name|List
+argument_list|<
+name|BytesRef
+argument_list|>
+name|strings
+parameter_list|)
+block|{
+name|Automaton
+index|[]
+name|eachIndividual
+init|=
+operator|new
+name|Automaton
+index|[
+name|strings
+operator|.
+name|size
+argument_list|()
+index|]
+decl_stmt|;
+name|int
+name|i
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|BytesRef
+name|bref
+range|:
+name|strings
+control|)
+block|{
+name|eachIndividual
+index|[
+name|i
+operator|++
+index|]
+operator|=
+name|BasicAutomata
+operator|.
+name|makeString
+argument_list|(
+name|bref
+operator|.
+name|utf8ToString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|BasicOperations
+operator|.
+name|union
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|eachIndividual
+argument_list|)
+argument_list|)
+return|;
+block|}
 comment|/** Test optimization to concatenate() */
 DECL|method|testSingletonConcatenate
 specifier|public
