@@ -9,6 +9,12 @@ http://s.apache.org/luceneversions
 
 ======================= Lucene 4.0.0-BETA =======================
 
+New features
+
+* LUCENE-3832: Added BasicAutomata.makeStringUnion method to efficiently
+  create automata from a fixed collection of UTF-8 encoded BytesRef
+  (Dawid Weiss, Robert Muir)
+
 API Changes
 
 * LUCENE-4138: update of morfologik (Polish morphological analyzer) to 1.5.3.
